# PlanFit2026-5-25

./: .gitignore  PlanFit提示词.md  gen-pwa-icons.cjs  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-05-25-PlanFit-plan.md
docs/superpowers/specs/: 2026-05-25-PlanFit-design.md
public/: manifest.json  sw.js
server/: db.ts  index.ts  package-lock.json  package.json  planfit_forum.db-shm  planfit_forum.db-wal  tsconfig.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: community.ts
src/components/: CalendarGrid.tsx  Celebration.tsx  CreatePlanModal.tsx  ExerciseCard.tsx  RestTimer.tsx  Sidebar.tsx  TemplateCard.tsx  WeatherPanel.tsx  WeeklyChart.tsx
src/context/: AppContext.tsx
src/data/: achievements.ts  motivations.ts
src/data/templates/: push-pull-legs.json
src/db/: database.ts  seed.ts
src/pages/: Community.tsx  Login.tsx  MyProfile.tsx  PlanOverview.tsx  Teaching.tsx  TodayPlan.tsx  TrainingRecords.tsx
src/types/: index.ts
src/utils/: achievements.ts
