[package]
name = "planfit"
version = "0.1.0"
description = "PlanFit - Fitness Training Planner"
authors = [""]
edition = "2021"

[lib]
name = "planfit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
